primary color completed changes in sidebar and login form

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,7 @@
   --chart-5: oklch(0.769 0.188 70.08);
 
   --sidebar: var(--background);
-  --sidebar-foreground: var(--foreground);
+  --sidebar-foreground: var(--background);
   --sidebar-primary: var(--primary);
   --sidebar-primary-foreground: var(--primary-foreground);
   --sidebar-accent: var(--accent);
